AO-186: Added Stock Card Summary Report with updated Language
