# src/main/java/org/openlmis/ao/reports/web/ReportsController.java
@@ -15,9 +15,11 @@ import org.springframework.stereotype.Controller;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.servlet.ModelAndView;
+
+import static org.springframework.web.bind.annotation.RequestMethod.GET;
 
 @Controller
 @Transactional
@@ -40,7 +42,7 @@ public class ReportsController extends BaseController {
    * @return ResponseEntity with the "#200 OK" HTTP response status and PDF file on success, or
    *     ResponseEntity containing the error description status.
    */
-  @RequestMapping(value = "/requisitions/{id}/print", method = RequestMethod.GET)
+  @RequestMapping(value = "/requisitions/{id}/print", method = GET)
   @ResponseBody
   public ModelAndView print(HttpServletRequest request, @PathVariable("id") UUID id)
           throws JasperReportViewException {
@@ -53,5 +55,19 @@ public class ReportsController extends BaseController {
     permissionService.canViewRequisition(requisition);
 
     return jasperReportsViewService.getRequisitionJasperReportView(requisition, request);
+  }
+
+  /**
+   * Get stock card summaries report by program and facility.
+   *
+   * @return generated PDF report
+   */
+  @RequestMapping(value = "/stockCardSummaries/print", method = GET)
+  @ResponseBody
+  public ModelAndView getStockCardSummaries(
+          @RequestParam("program") UUID program,
+          @RequestParam("facility") UUID facility) throws JasperReportViewException {
+    permissionService.canViewStockCard(program, facility);
+    return jasperReportsViewService.getStockCardSummariesReportView(program, facility);
   }
 }
